# optifuser

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
app/: gtk.cpp  main.cpp  partnet_loader.hpp  safe_queue.h  test_optix.cpp  zup.cpp
assets/: visualizer.glade
assets/46627/: meta.json  mobility_v2.json  result.json  result_after_merging.json  tree_hier.html  tree_hier_after_merging.html
assets/46627/parts_render/: 19.txt  22.txt  23.txt  26.txt  28.txt  30.txt  45.txt  56.txt  58.txt  59.txt  60.txt  61.txt  62.txt
assets/46627/parts_render_after_merging/: 47.txt  48.txt  49.txt  50.txt  51.txt  52.txt
assets/46627/point_sample/: label-10000.txt  ply-10000.ply  pts-10000.pts  pts-10000.txt  sample-points-all-label-10000.txt  sample-points-all-pts-label-10000.ply  sample-points-all-pts-nor-rgba-10000.ply  sample-points-all-pts-nor-rgba-10000.txt
assets/7128/: cues.txt  mobility.urdf
glsl_shader/: deferred.fsh  gbuffer.fsh  gbuffer_segmentation.fsh  skybox.fsh  skybox.vsh  ssao.fsh
include/: camera.h  camera_spec.h  debug.h  input.h  lights.h  material.h  mesh.h  object.h  objectLoader.h  optifuser.h  optix_renderer.h  renderer.h  scene.h  shader.h  texture.h
include/noise/: perlin.h
include/passes/: ao_pass.h  axis_pass.h  composite_pass.h  gbuffer_pass.h  lighting_pass.h  shadow_pass.h  transparency_pass.h
optix_shader/: constantbg.cu  cubemap.cu  dynamic_mesh.cu  environment_map.cu  hdrmap.cu  light.h  material.cu  material_mirror.cu  material_transparent.cu  material_unified.cu  pathtracer.cu  prd.h  procedural_sky.cu  random.h  shading_models.h  triangle_mesh.cu
ptx/: cuda_compile_ptx_1_generated_constantbg.cu.ptx  cuda_compile_ptx_1_generated_cubemap.cu.ptx  cuda_compile_ptx_1_generated_depth_camera.cu.ptx  cuda_compile_ptx_1_generated_dynamic_mesh.cu.ptx  cuda_compile_ptx_1_generated_hdrmap.cu.ptx  cuda_compile_ptx_1_generated_material.cu.ptx  cuda_compile_ptx_1_generated_material_mirror.cu.ptx  cuda_compile_ptx_1_generated_material_transparent.cu.ptx  cuda_compile_ptx_1_generated_material_unified.cu.ptx  cuda_compile_ptx_1_generated_pathtracer.cu.ptx  cuda_compile_ptx_1_generated_procedural_sky.cu.ptx  cuda_compile_ptx_1_generated_triangle_mesh.cu.ptx
renderer/: mesh.cpp  object.cpp  object.h  optifuser.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  stb_image.h  stb_image_write.h  texture.cpp  texture.h
renderer/noise/: perlin.cpp
scenes/sponza/: sponza.mtl
src/: camera.cpp  camera_spec.cpp  input.cpp  mesh.cpp  object.cpp  objectLoader.cpp  optifuser.cpp  optix_renderer.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp
src/noise/: perlin.cpp
src/passes/: ao_pass.cpp  axis_pass.cpp  composite_pass.cpp  gbuffer_pass.cpp  lighting_pass.cpp  shadow_pass.cpp  transparency_pass.cpp
